--- a/snapface/src/app/face-snap/face-snap.component.html
+++ b/snapface/src/app/face-snap/face-snap.component.html
@@ -1,1 +1,4 @@
-<p>face-snap works!</p>
+<h2>{{ title }}</h2>
+<p>Mis en ligne le {{ createDate }}</p>
+<p>{{ description }}</p>
+<p>😱 {{ snaps }}</p>
