--- a/snapface/src/app/face-snap/face-snap.component.html
+++ b/snapface/src/app/face-snap/face-snap.component.html
@@ -1,4 +1,7 @@
-<h2>{{ title }}</h2>
-<p>Mis en ligne le {{ createDate }}</p>
-<p>{{ description }}</p>
-<p>😱 {{ snaps }}</p>
+<div class="face-snap-card">
+    <h2>{{ title }}</h2>
+    <p>Mis en ligne le {{ createDate }}</p>
+    <img [src]="imgUrl" [alt]="title">
+    <p>{{ description }}</p>
+    <p>😱 {{ snaps }}</p>
+</div>
