FACE-SNAP Create conditon location

--- a/snapface/src/app/app.component.html
+++ b/snapface/src/app/app.component.html
@@ -9,6 +9,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <app-face-snap></app-face-snap>
+    <app-face-snap [faceSnap] = "mySnap"></app-face-snap>
+    <app-face-snap [faceSnap] = "myOtherSnap"></app-face-snap>
+    <app-face-snap [faceSnap] = "secondSnap"></app-face-snap>
 </body>
 </html>
