--- a/snapface/src/app/face-snap/face-snap.component.html
+++ b/snapface/src/app/face-snap/face-snap.component.html
@@ -1,7 +1,11 @@
 <div class="face-snap-card">
-    <h2>{{ title }}</h2>
-    <p>Mis en ligne le {{ createDate }}</p>
-    <img [src]="imgUrl" [alt]="title">
-    <p>{{ description }}</p>
-    <p>😱 {{ snaps }}</p>
+    <h2>{{ faceSnap.title }}</h2>
+    <p>Mis en ligne le {{ faceSnap.createDate }}</p>
+    <img [src]="faceSnap.imgUrl" [alt]="faceSnap.title">
+    <p *ngIf="faceSnap.location">Photo prise à {{ faceSnap.location }}</p>
+    <p>{{ faceSnap.desciption }}</p>
+    <p>
+        <button (click)="onAddSnap()">{{snapText}}</button>
+        😱 {{ faceSnap.snaps }}
+    </p>
 </div>
