--- a/snapface/src/app/face-snap/face-snap.component.html
+++ b/snapface/src/app/face-snap/face-snap.component.html
@@ -1,11 +1,13 @@
-<div class="face-snap-card">
-    <h2>{{ faceSnap.title }}</h2>
-    <p>Mis en ligne le {{ faceSnap.createDate }}</p>
+<div class="face-snap-card" [ngClass] = "{ snapped: snapText === 'No add snap' }">
+<!-- <div class="face-snap-card" [ngClass]="{ snapped: buttonText === 'Oops, unSnap!' }"> -->
+    <h2>{{ faceSnap.title | titlecase }}</h2>
+    <p>{{ 344.35 | currency : 'EUR' : 'code' }}</p>
+    <p>Mis en ligne le {{ faceSnap.createDate | date: 'longDate' }}</p>
     <img [src]="faceSnap.imgUrl" [alt]="faceSnap.title">
-    <p *ngIf="faceSnap.location">Photo prise à {{ faceSnap.location }}</p>
+    <p *ngIf="faceSnap.location === 'Lyon'">Photo prise à {{ faceSnap.location }}</p>
     <p>{{ faceSnap.desciption }}</p>
     <p>
-        <button (click)="onAddSnap()">{{snapText}}</button>
-        😱 {{ faceSnap.snaps }}
+        <button (click)="onAddSnap()">{{snapText}}</button>😱
+        <span [ngStyle]="{ color: 'rgb(0, ' + faceSnap.snaps + ', 0)' }"> {{ faceSnap.snaps }}</span>
     </p>
 </div>
