--- a/snapface/src/app/app.component.html
+++ b/snapface/src/app/app.component.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <app-header></app-header>
-    <app-face-snap-list></app-face-snap-list>
+    <router-outlet></router-outlet>
 </body>
 </html>
