--- a/snapface/src/app/header/header.component.html
+++ b/snapface/src/app/header/header.component.html
@@ -2,4 +2,5 @@
     <h1>snapface</h1>
     <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</a>
     <a routerLink="facesnaps">FaceSnaps</a>
+    <button (click)="onAddNewFaceSnap()">+</button>
 </header>
