--- a/snapface/src/app/landing-page/landing-page.component.html
+++ b/snapface/src/app/landing-page/landing-page.component.html
@@ -1,4 +1,9 @@
 <div class="landing-block">
+    <form #emailForm="ngForm" (ngSubmit)="onSubmitForm(emailForm)">
+        <label for="emailInput">Inscrivez-vous pour recevoir notre Newsletter</label>
+        <input type="email" id="emailInput" [(ngModel)]="userEmail" name="userEmail">
+        <button type="submit">Ok !</button>
+    </form>
     <img src="assets/snapface.png" alt="Snapface logo">
     <div class="landing-links">
         <button (click)="nextPage()">Continuer vers Snapface</button>
