--- a/snapface/src/app/single-face-snap/single-face-snap.component.html
+++ b/snapface/src/app/single-face-snap/single-face-snap.component.html
@@ -1,1 +1,13 @@
-<p>single-face-snap works!</p>
+<div class="face-snap-card" [ngClass]="{ snapped: snapText === 'Oops, unSnap!' }">
+    <h2>{{ faceSnap.title | uppercase }}</h2>
+    <a routerLink="/facesnaps">Back</a>
+    <p>Mis en ligne {{ faceSnap.createDate | date: 'à HH:mm, le d MMMM yyyy' }}</p>
+    <img [src]="faceSnap.imgUrl" [alt]="faceSnap.title">
+    <p>{{ faceSnap.description }}</p>
+    <p *ngIf="faceSnap.location">Photo prise à {{ faceSnap.location }}</p>
+    <p>
+      <button (click)="onSnap()">{{ snapText }}</button>
+      <span [ngStyle]="{ color: 'rgb(0,' + faceSnap.snaps + ', 0)'}">🤌 {{ faceSnap.snaps }}</span>
+    </p>
+  </div>
+
